--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -11,6 +11,6 @@ RUN yarn install
 # Bundle app source
 COPY . /usr/src/app
 
-EXPOSE 3000
+EXPOSE 3001
 
-CMD [ "yarn", "start" ]
+CMD [ "yarn", "run", "start"]
